--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "coderello/laravel-nova-lang": "^1.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0",
-        "laravel/nova": "*"
+        "laravel/nova": "*",
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
